Update dashboard (#1672)
Check in changes I made months before for the dashboard. The code are
already running in production for months.

Changes includes:
- Upgrade to Spring Boot 3.
- Upgrade to JDK19.
- Use VirtualThread for web requests and replace almost all the async
code with sync code.